feat: add hot update

--- a/devops-web/package.json
+++ b/devops-web/package.json
@@ -27,6 +27,6 @@
   },
   "scripts": {
     "build": "webpack --progress",
-    "watch": "webpack-dev-server --port 9012"
+    "watch": "webpack-dev-server --port 9012 --hot"
   }
 }
