--- a/app-web/package.json
+++ b/app-web/package.json
@@ -27,6 +27,6 @@
   },
   "scripts": {
     "build": "webpack --progress",
-    "watch": "webpack-dev-server --port 9011"
+    "watch": "webpack-dev-server --port 9011 --hot"
   }
 }
