--- a/portal/package.json
+++ b/portal/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.11.2",
